apps/watchtower/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: watchtower
  namespace: managoat-demos
  labels:
    app: watchtower
spec:
  type: ClusterIP
  selector:
    app: watchtower
  ports:
    - port: 80
      targetPort: 8080
